<resources>
    <string name="app_name">ChatApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_with_e_mail">Sign Up With E-mail</string>
    <string name="onboarding_text">Connect\nfriends\neasily and\nquickly</string>
    <string name="chat_app">Chat App</string>
    <string name="log_in"><u>Log in</u></string>
    <string name="existing_account">Existing account?</string>
    <string name="sign_up_with_email"><u>Sign Up with Email</u></string>
    <string name="sign_text">Get chatting with friends and family today by\n signing up for our ChatApp!</string>
    <string name="create_an_account">Create An Account</string>
    <string name="password">Password</string>
    <string name="your_e_mail">Your E-mail</string>
    <string name="your_name">Your name</string>
    <string name="log_in_to_chatapp">Log in to ChatApp</string>
    <string name="login_text">Welcome back!\nSign in using your email to continue us</string>
    <string name="message">Message</string>
    <string name="calls">Calls</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
</resources>