<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/gradient_background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.OnBoardingFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="140dp"
            android:layout_marginTop="46dp"
            android:background="@drawable/chatapplogo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:fontFamily="@font/dosis_light"
            android:letterSpacing="0.1"
            android:text="@string/chat_app"
            android:textColor="#E6E2E2"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/dosis_extra_bold"
            android:gravity="center"
            android:text="@string/onboarding_text"
            android:textColor="#FFF"
            android:textSize="60sp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#24786D"
            android:letterSpacing="0.1"
            android:text="@string/sign_up_with_e_mail"
            android:textAllCaps="false"
            android:textColor="#FFF"
            android:textSize="16sp"
            app:cornerRadius="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/dosis_medium"
            android:text="@string/existing_account"
            android:textColor="#E6E2E2"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/signUpBtn"
            app:layout_constraintStart_toStartOf="@+id/signUpBtn"
            app:layout_constraintTop_toBottomOf="@+id/signUpBtn" />

        <TextView
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:clickable="true"
            android:fontFamily="@font/dosis_extra_bold"
            android:text="@string/log_in"
            android:textColor="#E6E2E2"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>